@startuml
interface IConnection{
void EnableConnection()
void DisableConnection()
}

abstract class Connection{
Guid : ConnectionId
List<ConnectionParticipant> : ConnectionParticipants
bool : IsEnabled

void EnableConnection()
void DisableConnection()
ConnectionParticipant AddParticipant()
void RemoveParticipant(ConnectionParticipant)
void ShowParticipants()
}

class PhysicalConnection{
void WriteBuffer(ConnectionParticipant)
}

class ConnectionParticipant{
Guid : ConnectionParticipantId
string : Buffer

void WriteBuffer(string)
void ReadBuffer()
}

IConnection -- Connection
Connection -- PhysicalConnection
Connection *-- ConnectionParticipant
@enduml